# DFT_There_And_Back_Again

./: .gitignore  CMakeLists.txt  README.md  moveDlls.bat
Application/include/: Application.h  AssetManager.h  AudioEngine.h  Common.h  DFT.h  DFTOutputVisualizer.h  ExerciseVisualization.h  FFT.h  FIRfilterCoef.h  FunctionalVisualization.h  Noises.h  SdlManager.h  SimpleFDN.h  SpinningCubeDemo.h  simple_fft_FFTandIFFT.h
Application/src/: Application.cpp  AssetManager.cpp  AudioEngine.cpp  Common.cpp  DFTOutputVisualizer.cpp  SdlManager.cpp  SimpleFDN.cpp  main.cpp
FDN/include/: FDN.h  Filters.h
FDN/src/: FDN.cpp
MyDFT/include/: MyDFT.h
MyDFT/src/: MyDFT.cpp
MyUtils/include/: MyDFT.h  MyMath.h  MyUtils.h  MyUtilsTypedefs.h
MyUtils/src/: MyDFT.cpp  MyUtils.cpp
results/: DFT_output.txt  realTimeDftVisualization.mkv  rectangleVisualization.mkv
